--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -23,10 +23,7 @@
     <link rel="stylesheet" href="css/estilos.css" />
 
 
-    <!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+
 
 </head>
 
@@ -82,23 +79,14 @@
                         <h1>Nuestra <span>Historia</span></h1>
                         <div class="row">
                             <div class="col-md-9">
-                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores
-                                    Vladimiro y Juani
-                                    de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las
-                                    personas necesitadas pudieran encontrar amor, ministración
+                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración
                                     y libertad de las ataduras que pudieran estar afectándoles.</p>
 
-                                <p align="justify">Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión
-                                    de Fe. En la
-                                    actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como
-                                    consecuencia de ello hay iglesias Visión de Fe en varios
+                                <p align="justify">Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión de Fe. En la actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como consecuencia de ello hay iglesias Visión de Fe en varios
                                     países y en el interior de la república de Guatemala.</p>
 
-                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores
-                                    Vladimiro y Juani
-                                    de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las
-                                    personas necesitadas pudieran encontrar amor, ministración y libertad de las
-                                    ataduras que pudieran estar afectándoles. </p>
+                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración
+                                    y libertad de las ataduras que pudieran estar afectándoles. </p>
                             </div>
                         </div>
                     </div>
@@ -122,17 +110,13 @@
                         <div class="testimonials-slider" id="test-slider">
                             <div class="ts-item">
                                 <h1>Visión</h1>
-                                <p>Somos una iglesia restauradora de vidas. Utilizamos el sistema de enseñanza de
-                                    nuestro Señor Jesús, motivando a todos  a guardar Su  Palabra  y  nos proponemos
-                                    formar a cada creyente como un hacedor de discípulos. Mateo 28:19 </p>
+                                <p>Somos una iglesia restauradora de vidas. Utilizamos el sistema de enseñanza de nuestro Señor Jesús, motivando a todos  a guardar Su  Palabra  y  nos proponemos formar a cada creyente como un hacedor de discípulos. Mateo
+                                    28:19 </p>
                             </div>
                             <div class="ts-item">
                                 <h1>Misión</h1>
-                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus.
-                                    Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at
-                                    mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel
-                                    lectus pretium interdum a eget ante. </p>
+                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
+                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
                             </div>
                         </div>
                         <div class="slide-num-holder test-slider" id="snh-2"></div>
@@ -143,55 +127,19 @@
 
 
 
-        <!-- Team section start -->
-        <section class="team-section spad">
-            <div class="container">
-                <div class="section-title mb100">
-                    <h1>Equipo Pastoral</h1>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="team-member">
-                            <img src="img/team/1.jpg" alt="">
-                            <div class="member-info">
-                                <h2>Jack Smith</h2>
-                                <p>Senior Architect</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="team-member">
-                            <img src="img/team/2.jpg" alt="">
-                            <div class="member-info">
-                                <h2>Lili Jameson</h2>
-                                <p>Senior Architect</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="team-member">
-                            <img src="img/team/3.jpg" alt="">
-                            <div class="member-info">
-                                <h2>Michael Dow</h2>
-                                <p>Senior Architect</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+
 
         <!-- Footer section start -->
         <!--<footer class="footer-section">-->
 
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <!--<div class="copyright">Copyright &copy;
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <!--<div class="copyright">Copyright &copy;
                 <script>
                     document.write(new Date().getFullYear());
                 </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o"
                     aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </div>-->
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         <!--</footer>-->
         <!-- Footer section end -->
         <!--====== Javascripts & Jquery ======-->
