--- a/voluntariado-front/admin.html
+++ b/voluntariado-front/admin.html
@@ -48,7 +48,8 @@
         <div class="top-bar">
             <nav class="nav-menu">
                 <ul>
-                    <li class="active"><a href="login.html">Cerrar Sesión</a></li>
+                    <li class="active"><a href="admin.html">Inicio</a></li>
+                    <li><a href="login.html">Cerrar Sesión</a></li>
                 </ul>
             </nav>
         </div>
@@ -78,18 +79,18 @@
                 </div>
 
                 <div>
-                    <a href="" class="boton1">Agregar Versículos</a>
+                    <a href="agregarenseñanza.html" class="boton1">Agregar Enseñanzas</a>
 
                     <div>
-                        <a href="" class="boton2">Agregar Noticias</a>
+                        <a href="agregarnoticias.html" class="boton2">Agregar Noticias</a>
                     </div>
 
                     <div>
-                        <a href="" class="boton3">Agregar Videos</a>
+                        <a href="agregarvideos.html" class="boton3">Agregar Videos</a>
                     </div>
 
                     <div>
-                        <a href="" class="boton4">Visualizar Peticiones</a>
+                        <a href="visualizarpeticiones.html" class="boton4">Visualizar Peticiones</a>
                     </div>
 
                     <div>
@@ -101,14 +102,14 @@
         </div>
     </section>
 
-    <!--<section class="intro-section pt100 pb50">
+    <section class="intro-section pt100 pb50">
         <div class="container">
             <div class="row">
 
 
             </div>
         </div>
-    </section>-->
+    </section>
 
     <!-- Intro section end -->
 
@@ -116,18 +117,18 @@
 
 
     <!-- Footer section start -->
-    <!--<footer class="footer-section">-->
+    <footer class="footer-section">
 
 
 
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <!--<div class="copyright">Copyright &copy;
+        <div class="copyright">Copyright &copy;
             <script>
                 document.write(new Date().getFullYear());
-            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>-->
+            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
-    <!--</footer>-->
+    </footer>
     <!-- Footer section end -->
 
 
