--- a/voluntariado-front/agregarvideos.html
+++ b/voluntariado-front/agregarvideos.html
@@ -95,7 +95,7 @@
 
                     <form class="form-form validate-form">
                         <span class="login100-form-title">
-                           <b> Agregar Noticias</b>
+                           <b> Agregar Videos</b>
                         </span>
 
                         <div class="wrap-input100 validate-input">
@@ -144,16 +144,17 @@
 
 
     <!-- Footer section start -->
+    <footer class="footer-section">
+        <!-- <footer class="footer-section"> -->
 
 
 
-
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    <div class="copyright">Copyright &copy;
-        <script>
-            document.write(new Date().getFullYear());
-        </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <div class="copyright">Copyright &copy;
+            <script>
+                document.write(new Date().getFullYear());
+            </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
     </footer>
     <!-- <div class="copyright">Copyright &copy;
