--- a/voluntariado-front/index.html
+++ b/voluntariado-front/index.html
@@ -149,7 +149,7 @@
 
 
     <!-- Footer section start -->
-    <!--<footer class="footer-section">-->
+    <footer class="footer-section">
 
 
 
@@ -160,7 +160,7 @@
             </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>-->
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
-    <!--</footer>-->
+    </footer>
     <!-- Footer section end -->
 
     <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
