--- a/voluntariado-front/Noticias.html
+++ b/voluntariado-front/Noticias.html
@@ -82,61 +82,39 @@
                         <!-- Blog post -->
                         <div class="blog-post ">
                             <div class="thumb ">
-                                <a href="# ">
-                                    <img src="img/blog/1.jpg " alt=" ">
-                                </a>
+                                <img src="img/noticia1.jpeg " alt=" ">
                             </div>
                             <div class="blog-content ">
-                                <div class="post-date ">29 February 2018</div>
-                                <h2><a href=" ">Aviso 1</a></h2>
+                                <div class="post-date ">26 octubre 2021</div>
+                                <h2>Aniversario número 35 de la Iglesia Cristiana Visión de Fe</h2>
                                 <div class="post-meta ">
-                                    <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
-                                    <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
-                                    <a href="# ">23 <i class="fa fa-heart-o "></i></a>
-                                    <a href="# ">6 <i class="fa fa-comment-o "></i></a>
                                 </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo efficitur turpis vitae efficitur. Etiam a accumsan libero. Mauris eu nisl odio. Vestibulum sodales purus urna, non auctor neque viverra non. Cum sociis
-                                    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
+                                <p>En un día de octubre como hoy, un domingo hace 35 años, tuvimos el primer servicio De la Iglesia Cristiana Visión de Fe.</p>
+                                <p> Lo realizamos en el patio del COLEGIO MONTE GERISIM, de los esposos Carlos y Sonia Del Valle.</p>
+                                <p>Muchos amados y valientes hermanos nos acompañaron. Durante estos años miles de personas fueron impactadas por Dios.</p>
+                                <p>Bendito sea el SEÑOR que ha estado con nosotros todos estos años.</p>
                             </div>
                         </div>
                         <!-- Blog post -->
                         <div class="blog-post ">
                             <div class="thumb ">
-                                <a href="# ">
-                                    <img src="img/blog/2.jpg " alt=" ">
-                                </a>
+                                <img src="img/noticia2.jpeg " alt=" ">
                             </div>
                             <div class="blog-content ">
-                                <div class="post-date ">29 February 2018</div>
-                                <h2><a href=" ">Aviso 2</a></h2>
-                                <div class="post-meta ">
-                                    <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
-                                    <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
-                                    <a href="# ">23 <i class="fa fa-heart-o "></i></a>
-                                    <a href="# ">6 <i class="fa fa-comment-o "></i></a>
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo efficitur turpis vitae efficitur. Etiam a accumsan libero. Mauris eu nisl odio. Vestibulum sodales purus urna, non auctor neque viverra non. Cum sociis
-                                    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
+                                <div class="post-date ">20 Octubre 2021</div>
+                                <h2>Importante</h2>
+                                <p>Se cancela el estudio pastoral del día miércoles 20 de octubre, los esperamos el 27 de octubre nuevamente.</p>
                             </div>
                         </div>
                         <!-- Blog post -->
                         <div class="blog-post ">
                             <div class="thumb ">
-                                <a href="# ">
-                                    <img src="img/blog/3.jpg " alt=" ">
-                                </a>
+                                <img src="img/noticia3.jpeg " alt=" ">
                             </div>
                             <div class="blog-content ">
-                                <div class="post-date ">29 February 2018</div>
-                                <h2><a href=" ">Aviso 3</a></h2>
-                                <div class="post-meta ">
-                                    <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
-                                    <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
-                                    <a href="# ">23 <i class="fa fa-heart-o "></i></a>
-                                    <a href="# ">6 <i class="fa fa-comment-o "></i></a>
-                                </div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo efficitur turpis vitae efficitur. Etiam a accumsan libero. Mauris eu nisl odio. Vestibulum sodales purus urna, non auctor neque viverra non. Cum sociis
-                                    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
+                                <div class="post-date ">2 octubre 2021</div>
+                                <h2>Santa Cena</h2>
+                                <p>Te invitamos a que asistas a nuestro servicio dominical el día domingo 3 de octubre, junto a tu familia y podamos compartir de la Santa Cena.</p>
                             </div>
                         </div>
                     </div>
@@ -150,12 +128,12 @@
 
 
 
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <!--<div class="copyright">Copyright &copy;
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                <!--<div class="copyright">Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
                         </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></div>-->
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
                 <!--</footer>-->
                 <!-- Footer section end -->
