--- a/voluntariado-front/Enseñanzas.html
+++ b/voluntariado-front/Enseñanzas.html
@@ -82,60 +82,52 @@
                     <div class="blog-post ">
                         <div class="thumb ">
                             <a href="# ">
-                                <img src="img/blog/1.jpg " alt=" ">
+                                <img src="img/Semilla-de-mostaza.jpg" alt=" ">
                             </a>
                         </div>
                         <div class="blog-content ">
-                            <div class="post-date ">29 February 2018</div>
-                            <h2><a href=" ">Aviso 1</a></h2>
-                            <div class="post-meta ">
-                                <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
-                                <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
-                                <a href="# ">23 <i class="fa fa-heart-o "></i></a>
-                                <a href="# ">6 <i class="fa fa-comment-o "></i></a>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo efficitur turpis vitae efficitur. Etiam a accumsan libero. Mauris eu nisl odio. Vestibulum sodales purus urna, non auctor neque viverra non. Cum sociis
-                                natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
+                            <div class="post-date ">15 Octubre 2021</div>
+                            <h2>La parábola de la semilla de mostaza</h2>
+                            <p>13:31 Otra parábola les refirió, diciendo: El reino de los cielos es semejante al grano de mostaza, que un hombre tomó y sembró en su campo; 13:32 el cual a la verdad es la más pequeña de todas las semillas; pero cuando ha crecido, es la mayor de las hortalizas, y se hace árbol, de tal manera que vienen las aves del cielo y hacen nidos en sus ramas. Mateo 13:31</p>
                         </div>
                     </div>
                     <!-- Blog post -->
                     <div class="blog-post ">
                         <div class="thumb ">
                             <a href="# ">
-                                <img src="img/blog/2.jpg " alt=" ">
+                                <img src="img/octubre.jpg " alt=" ">
                             </a>
                         </div>
                         <div class="blog-content ">
-                            <div class="post-date ">29 February 2018</div>
-                            <h2><a href=" ">Aviso 2</a></h2>
-                            <div class="post-meta ">
-                                <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
-                                <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
-                                <a href="# ">23 <i class="fa fa-heart-o "></i></a>
-                                <a href="# ">6 <i class="fa fa-comment-o "></i></a>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo efficitur turpis vitae efficitur. Etiam a accumsan libero. Mauris eu nisl odio. Vestibulum sodales purus urna, non auctor neque viverra non. Cum sociis
-                                natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
+                            <div class="post-date ">02 Octubre 2021</div>
+                            <h2>Calendario Lectura Biblica Octubre 2021</h2>
+                            <p>Toda la Escritura es inspirada por Dios y útil para enseñar, para reprender, para corregir y para instruir en la justicia, a fin de que el siervo de Dios esté enteramente capacitado para toda buena obra.
+                                2 Timoteo 3:16-17</p>
                         </div>
                     </div>
                     <!-- Blog post -->
                     <div class="blog-post ">
                         <div class="thumb ">
                             <a href="# ">
-                                <img src="img/blog/3.jpg " alt=" ">
+                                <img src="img/el-senor-es-mi-pastor.jpg" alt=" ">
                             </a>
                         </div>
                         <div class="blog-content ">
-                            <div class="post-date ">29 February 2018</div>
-                            <h2><a href=" ">Aviso 3</a></h2>
-                            <div class="post-meta ">
-                                <a href="# ">John Doe <i class="fa fa-star-o "></i></a>
-                                <a href="# ">News <i class="fa fa-newspaper-o "></i></a>
-                                <a href="# ">23 <i class="fa fa-heart-o "></i></a>
-                                <a href="# ">6 <i class="fa fa-comment-o "></i></a>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo efficitur turpis vitae efficitur. Etiam a accumsan libero. Mauris eu nisl odio. Vestibulum sodales purus urna, non auctor neque viverra non. Cum sociis
-                                natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum et mauris rutrum, scelerisque orci id, rutrum erat...</p>
+                            <div class="post-date ">29 Septiembre 2021</div>
+                            <h2>Salmo de David</h2>
+                            <p> Jehová es mi pastor; nada me faltará.</p>
+                            <p> En lugares de delicados pastos me hará descansar;
+                                Junto a aguas de reposo me pastoreará.</p>
+                            <p> Confortará mi alma;
+                                Me guiará por sendas de justicia por amor de su nombre.</p>
+                            <p> Aunque ande en valle de sombra de muerte,
+                                No temeré mal alguno, porque tú estarás conmigo;
+                                Tu vara y tu cayado me infundirán aliento.</p>
+                            <p> Aderezas mesa delante de mí en presencia de mis angustiadores;
+                                Unges mi cabeza con aceite; mi copa está rebosando.</p>
+                            <p> Ciertamente el bien y la misericordia me seguirán todos los días de mi vida,
+                                Y en la casa de Jehová moraré por largos días.</p>
+
                         </div>
                     </div>
                 </div>
