--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -107,19 +107,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 pl-lg-0 offset-lg-5 cta-content">
-                        <div class="testimonials-slider" id="test-slider">
+                        <div class="testimonials-slider">
                             <div class="ts-item">
                                 <h1>Visión</h1>
                                 <p>Somos una iglesia restauradora de vidas. Utilizamos el sistema de enseñanza de nuestro Señor Jesús, motivando a todos  a guardar Su  Palabra  y  nos proponemos formar a cada creyente como un hacedor de discípulos. Mateo
                                     28:19 </p>
                             </div>
-                            <div class="ts-item">
-                                <h1>Misión</h1>
-                                <p>Pellentesque lorem dolor, malesuada eget tortor vitae, tristique lacinia lectus. Pellentesque sed accumsan risus, id aliquam nulla. Integer lorem risus, feugiat at mauris malesuada, accumsan pellentesque ipsum. Nunc dapibus,
-                                    libero ut pulvinar accumsan, tortor nisl iaculis ligula. Curabitur finibus dolor vel lectus pretium interdum a eget ante. </p>
-                            </div>
                         </div>
-                        <div class="slide-num-holder test-slider" id="snh-2"></div>
                     </div>
                 </div>
             </div>
