--- a/voluntariado-front/login.html
+++ b/voluntariado-front/login.html
@@ -1,80 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Login Admin</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--===============================================================================================-->
     <link href="img/icono.jpg" rel="shortcut icon" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="vendor/bootstrap/css/bootstrap.min.css"
+    />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="font/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="font/font-awesome-4.7.0/css/font-awesome.min.css"
+    />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="vendor/css-hamburgers/hamburgers.min.css"
+    />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="vendor/select2/select2.min.css"
+    />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/util.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <!--===============================================================================================-->
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100">
-                <div class="login100-pic js-tilt" data-tilt>
-                    <img src="img/logob.png" alt="IMG" height="225" width="700">
-                </div>
+      <div class="container-login100">
+        <div class="wrap-login100">
+          <div class="login100-pic js-tilt" data-tilt>
+            <img src="img/logob.png" alt="IMG" height="225" width="700" />
+          </div>
 
-                <form class="login100-form validate-form">
-                    <span class="login100-form-title">
-						Vista de Administrador
-					</span>
+          <form class="login100-form validate-form">
+            <span class="login100-form-title"> Vista de Administrador </span>
 
-                    <div class="wrap-input100 validate-input" data-validate="Usuario Incorrecto">
-                        <input class="input100" type="text" name="email" placeholder="Usuario">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</span>
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Contraseña Incorrecta">
-                        <input class="input100" type="password" name="pass" placeholder="Contraseña">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-                    </div>
-
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-							Iniciar Sesión
-						</button>
-                    </div>
-
-                    <div class="text-center p-t-12">
-                        <span class="txt1">
-							Olvidó su
-						</span>
-                        <a class="txt2" href="#">
-							Usuario / Constraseña?
-						</a>
-                    </div>
-
-                </form>
+            <div
+              class="wrap-input100 validate-input"
+              data-validate="Usuario Incorrecto"
+            >
+              <input
+                class="input100"
+                type="text"
+                id="usuario"
+                name="usuario"
+                placeholder="Usuario"
+              />
+              <span class="focus-input100"></span>
+              <span class="symbol-input100">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+              </span>
             </div>
+
+            <div
+              class="wrap-input100 validate-input"
+              data-validate="Contraseña Incorrecta"
+            >
+              <input
+                class="input100"
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Contraseña"
+              />
+              <span class="focus-input100"></span>
+              <span class="symbol-input100">
+                <i class="fa fa-lock" aria-hidden="true"></i>
+              </span>
+            </div>
+
+            <div class="container-login100-form-btn">
+              <button
+                type="button"
+                onclick="logueo()"
+                class="login100-form-btn"
+              >
+                Iniciar Sesión
+              </button>
+            </div>
+
+            <div class="text-center p-t-12">
+              <span class="txt1"> Olvidó su </span>
+              <a class="txt2" href="#"> Usuario / Constraseña? </a>
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-
-
-
 
     <!--===============================================================================================-->
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
@@ -86,12 +112,71 @@
     <!--===============================================================================================-->
     <script src="vendor/tilt/tilt.jquery.min.js"></script>
     <script>
-        $('.js-tilt').tilt({
-            scale: 1.1
-        })
+
+
+      function logueo() {
+        //Extrayendo los datos de los campos de texto del HTML
+        var usuario = document.querySelector('#usuario').value;
+        var password = document.querySelector('#password').value;
+
+        //Guardando los datos en un JSON
+        var objeto = {
+          'usuario': usuario,
+          'contraseña': password
+        }
+
+        //Manda un mensaje a consola de que si se recibe el click
+        console.log(objeto);
+
+        
+
+        //Hacinedo uso del fetch donde:
+        /* EL METODO MAGICO - EL FETCH
+                El fetch es el que nos permite crear peticiones HTTPS, la estructura es simple.
+                Debemos de ingresarle una ruta, es la ruta del endpoint que queremos consumir, seguido de ello
+                agregamos un objeto con los atributos de la peticion
+                    method: Puede ser GET, POST, PUT, DELETE
+                    body: Si el endpoint necesita un body, se le manda en este valor
+                            - Agregarle el metodo JSON.stringify(objeto)
+                    headers: Estas normalmente no cambian, son las propiedades del metodo
+            */
+
+        //--------------------------------------INICIO DE TIPOS DE INICIO DE SESIÓN----------------------------
+        //Haciendo las peticiones a la api de flask por medio de Fetch
+        fetch(`http://localhost:5000/Admin/${usuario}`, {
+            method: 'GET',
+            headers:{
+                'Content-Type': 'application/json',
+                'Access-Control-Allow-Origin': '*',}})
+				//Parte del try-catch - siempre debe realizarse por aquello de los fallos
+            .then(res => res.json())
+            .catch(err => {
+                console.error('Error:', err)
+                alert("El nombre de usuario no existe.")
+            })
+			//Practicamente aquí se esta diciendo que si el .then de antes funcione se ejecute este nuevo .then
+			//Este response es el encargado de administrar las operaciones a realizar con los datos del servidor.
+			.then(response =>{
+				console.log(response);
+                //Haciendo las validaciones del inicio de sesión
+                if (usuario == response.nombre_Usuario){
+                    if(password == response.contraseña){
+                        console.log("registro exitoso")
+                        alert("Exito!!! Inicio de sesión valido.");
+                        sessionStorage.setItem("buscar", usuario);
+                        location.href = "admin.html"
+                    }else{
+                        alert("La contraseña es incorrecta.");
+                    }    
+                }else{
+                    alert("El nombre de usuario no existe.");
+                }
+				
+			})
+
+        }
     </script>
     <!--===============================================================================================-->
     <script src="js/main.js"></script>
-
-</body>
+  </body>
 </html>
