--- a/voluntariado-front/admin.html
+++ b/voluntariado-front/admin.html
@@ -84,17 +84,13 @@
                     <div>
                         <a href="agregarnoticias.html" class="boton2">Agregar Noticias</a>
                     </div>
-
-                    <div>
-                        <a href="agregarvideos.html" class="boton3">Agregar Videos</a>
-                    </div>
-
+                    <br>
                     <div>
                         <a href="visualizarpeticiones.html" class="boton4">Visualizar Peticiones</a>
                     </div>
-
+                    
                     <div>
-                        <a href="" class="boton5">Editar Información de Administrador</a>
+                        <a href="editaradmin.html" class="boton5">Editar Información de Administrador</a>
                     </div>
 
                 </div>
