peticiones completado, correo gmail enviados correctamente

--- a/voluntariado-front/Peticiones.html
+++ b/voluntariado-front/Peticiones.html
@@ -92,7 +92,7 @@
                             <input type="text" id = "asunto" name = "asunto" placeholder="Asunto del correo">
                             <input type="text" id = "correo" name = "correo" placeholder="Ingrese su correo electrónico" required="campo obligatorio">
                             <textarea id = "email" name = "email" placeholder="Escriba un mensaje" required="campo obligatorio"></textarea>
-                            <button type="button" onclick="sendEmail()" class="site-btn sb-dark">Enviar</button>
+                            <button type="button" onclick="sendEmail()" class="btn btn-outline-success">Enviar correo</button>
                         </form>
                     </div>
                 </div>
